--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.14",
     "axios": "^1.5.0",
+    "dayjs": "^1.11.10",
     "monday-ui-react-core": "^2.100.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
