--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.15.14",
     "axios": "^1.5.0",
     "dayjs": "^1.11.10",
+    "emoji-picker-react": "^4.9.2",
     "monday-ui-react-core": "^2.100.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
