--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "emoji-picker-react": "^4.9.2",
     "monday-ui-react-core": "^2.100.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.2",
     "react-router": "^6.16.0",
