--- a/package.json
+++ b/package.json
@@ -13,13 +13,19 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.14",
+    "@popperjs/core": "^2.11.8",
     "axios": "^1.5.0",
+    "date-fn": "^0.0.2",
+    "date-fns": "^3.6.0",
     "dayjs": "^1.11.10",
     "emoji-picker-react": "^4.9.2",
     "monday-ui-react-core": "^2.100.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-datepicker": "^6.6.0",
+    "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
+    "react-popper": "^2.3.0",
     "react-redux": "^8.1.2",
     "react-router": "^6.16.0",
     "react-router-dom": "^6.16.0",
