--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "monday-ui-react-core": "^2.100.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
+    "react-date-range": "^2.0.0-alpha.4",
     "react-datepicker": "^6.6.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
