--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-datepicker": "^6.6.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.8.2",
     "react-popper": "^2.3.0",
     "react-redux": "^8.1.2",
     "react-router": "^6.16.0",
