--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.15.14",
     "@popperjs/core": "^2.11.8",
     "axios": "^1.6.8",
+    "cloudinary": "^2.1.0",
     "date-fn": "^0.0.2",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.10",
