--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite-react-proj",
+  "name": "oneday-frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -17,6 +17,7 @@
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.10",
     "monday-ui-react-core": "^2.100.1",
+    "monday-ui-style": "^0.4.2",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-date-range": "^2.0.0-alpha.4",
