--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "@mui/icons-material": "^5.15.15",
     "@mui/material": "^5.15.14",
+    "@slack/bolt": "^3.17.1",
     "axios": "^1.6.8",
     "cloudinary": "^2.1.0",
     "date-fn": "^0.0.2",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.10",
+    "dotenv": "^16.4.5",
     "monday-ui-react-core": "^2.100.1",
     "monday-ui-style": "^0.4.2",
     "react": "^18.2.0",
