--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@slack/bolt": "^3.17.1",
     "axios": "^1.6.8",
     "cloudinary": "^2.1.0",
+    "compressorjs": "^1.2.1",
     "date-fn": "^0.0.2",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.10",
